# PyECN

./: .flake8  .gitignore  CITATION.cff  LICENSE.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
pyecn/: I_ext.csv  __init__.py  __main__.py  cylindrical.toml  parse_inputs.py  pouch.toml  read_LUT.py
pyecn/Battery_Classes/Combined_potential/Core_class/: core.py
pyecn/Battery_Classes/Combined_potential/Form_factor_classes/: cylindrical.py  pouch.py  prismatic.py
pyecn/Battery_Classes/Combined_potential/LUT_class/: LUT.py
pyecn/Battery_Classes/Module_level/: module.py  module_4T.py
pyecn/Battery_Classes/Thermal_entitities/cylindrical/: ribbon.py
pyecn/Battery_Classes/Thermal_entitities/pouch/: tab.py  weld.py
pyecn/Battery_Classes/Thermal_entitities/prismatic/: can_prismatic.py
pyecn/Examples/: cylindrical_tabless_Fig_3.toml  pouch_Fig_4a.toml  pouch_Fig_4b.toml
pyecn/Input_LUTs/Cylindrical_Cell1/: Ci-SoC-T15.csv  Ci-SoC-T25.csv  Ci-SoC-T55.csv  OCV-SoC-T45.csv  R0-SoC-T15.csv  R0-SoC-T25.csv  R0-SoC-T45.csv  Ri-SoC-T45.csv  SoC.csv
pyecn/Input_LUTs/Cylindrical_Cell2/: Ci-SoC-T35.csv  Ci-SoC-T45.csv  OCV-SoC-T15.csv  OCV-SoC-T25.csv  OCV-SoC-T35.csv  OCV-SoC-T55.csv  R0-SoC-T35.csv  R0-SoC-T55.csv  Ri-SoC-T15.csv  Ri-SoC-T25.csv  Ri-SoC-T35.csv  Ri-SoC-T55.csv  T.csv
pyecn/Input_LUTs/Pouch_Cell1/: Ci-SoC-T10.csv  Ci-SoC-T20.csv  Ci-SoC-T30.csv  Ci-SoC-T40.csv  OCV-SoC.csv  R0-SoC-T10.csv  R0-SoC-T20.csv  R0-SoC-T30.csv  R0-SoC-T40.csv  Ri-SoC-T10.csv  Ri-SoC-T20.csv  Ri-SoC-T30.csv  Ri-SoC-T40.csv  SoC.csv  T.csv  dVdT-SoC.csv
